--- a/notice/templates/notice/kinds.html
+++ b/notice/templates/notice/kinds.html
@@ -34,6 +34,7 @@
 
 
   <form action="" class="tableForm">
+    
 
     <table class="tableHead">
       <thead>
@@ -58,6 +59,7 @@
           <td>{{notice.view_cnt}}</td>
         </tr>
         {% endfor %}
+        <tr class="blankTR"></tr>
       </tbody>
     </table>
 
