--- a/static/css/accounting/salay_detail.css
+++ b/static/css/accounting/salay_detail.css
@@ -51,10 +51,9 @@
 }
 
 .tableHead {
-    width: calc(100% - 0.2rem);
+    width: 100%;
     height: 3.2rem;
-    border: 0.1rem solid #CDCDCE;
-    border-radius: 0.3rem 0.3rem 0 0;
+    border-spacing: 0;
 }
 
 .tableHead thead {
@@ -63,7 +62,6 @@
 }
 
 table tr {
-    display: flex;
     width: 100%;
     min-height: 3.2rem;
     height: auto;
@@ -73,18 +71,21 @@ table tr {
 .tableHead tr {
     width: 100%;
     height: 100%;
-    align-items: center;
     border: none;
     font-size: 1.4rem;
     font-weight: 500;
-    color: #7A7A7A;
+    color: white;
+    background-color: #444444;
+}
+.tableHead td {
+    text-align: center;
 }
 
-table tr:nth-child(odd) {
+.tableBody tr:nth-child(odd) {
     background-color: white;
 }
 
-table tr:nth-child(even) {
+.tableBody tr:nth-child(even) {
     background-color: #EFEFEF;
 }
 
@@ -102,10 +103,10 @@ tbody {
 }
 
 .tableBody td {
-    display: flex;
-    align-items: center;
     font-size: 1.4rem;
     color: #191919;
+    border-right: 0.1rem solid #D4D4D4;
+    border-bottom: 0.1rem solid #D4D4D4;
 }
 
 td {
@@ -118,19 +119,11 @@ td {
 }
 
 td:nth-child(1) {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 3%;
 }
 
 td:nth-child(2) {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 4%;
-    padding-right: 1%;
-    box-sizing: border-box;
 }
 
 td:nth-child(3) {
@@ -145,6 +138,30 @@ td:nth-child(5) {
     width: 15%;
 }
 
+.tableBody td:nth-child(1){
+    text-align: center;
+}
+.tableBody td:nth-child(2) {
+    color: #0069D9;
+    text-align: center;
+}
+.tableBody td:nth-child(4),
+.tableBody td:nth-child(5),
+.tableBody td:nth-child(6),
+.tableBody td:nth-child(7),
+.tableBody td:nth-child(8),
+.tableBody td:nth-child(9),
+.tableBody td:nth-child(10) {
+    text-align: right;
+    padding-right: 1rem;
+    box-sizing: border-box;
+}
+.tableBody td:nth-child(3) {
+    text-align: left;
+    padding-left: 1rem;
+    box-sizing: border-box;
+}
+
 .btnAreaBox input {
     background-color: #444444;
 }
@@ -152,109 +169,6 @@ td:nth-child(5) {
 .btnAreaBox .btnBox div {
     background-color: #0069D9;
     margin-left: 2rem;
-}
-
-.popupContainer {
-    position: fixed;
-    top: 50%;
-    left: calc(50% + 11rem);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 54.5rem;
-    height: 42rem;
-    background-color: white;
-    border-radius: 0.3rem;
-    box-shadow: 0 0.2rem 0.4rem rgb(0 0 0 / 16%);
-    transform: translate(-50%, -50%);
-}
-
-.PopupTitle {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 4.8rem;
-    border-bottom: 0.1rem solid #191919;
-    font-size: 1.6rem;
-    font-weight: 500;
-}
-
-.PopupDataArea {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    width: 100%;
-    height: calc(100% - 9.7rem);
-    padding: 4.2rem 3rem 0 3rem;
-    box-sizing: border-box;
-}
-
-.PopupDataCell {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
-    width: 23rem;
-    height: 6rem;
-}
-
-.PopupDataCell div {
-    width: 100%;
-}
-
-.PopupDataCell:nth-last-child(1) {
-    width: 100%;
-}
-
-.PopupData {
-    width: 100%;
-    padding-bottom: 0.1rem;
-    font-size: 1.4rem;
-    color: #191919;
-    border-bottom: 0.1rem solid #191919;
-}
-
-.PopupDataTitle {
-    font-size: 1.4rem;
-    color: #7A7A7A;
-}
-
-.PopupDataInput {
-    width: 100%;
-    height: 2.6rem;
-    padding-left: 0.6rem;
-    padding-bottom: 0.1rem;
-    font-size: 1.4rem;
-    color: #191919;
-    border: 0.1rem solid #D2D2D2;
-    border-radius: 0.3rem;
-    box-sizing: border-box;
-    outline: none;
-}
-
-.PopupBtnBox {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 4.8rem;
-    box-sizing: border-box;
-}
-
-.closeBtn {
-    background-color: #444444;
-    margin: 1rem;
-}
-
-.createBtn {
-    background-color: #0069D9;
-    margin: 1rem;
-}
-
-.editBtn {
-    background-color: #0069D9;
-    margin: 1rem;
 }
 
 .detailTotal {
@@ -273,19 +187,32 @@ td:nth-child(5) {
 }
 
 .detailTotal td {
-    display: flex;
-    align-items: center;
     width: calc(52% / 5);
     font-size: 1.6rem;
 }
 
 .detailTotal td:nth-child(1) {
+    text-align: center;
+    color: white;
     width: 7%;
-    background-color: #EFEFEF;
+    background-color: #444444;
 }
 
 .detailTotal td:nth-child(2),
 .detailTotal td:nth-child(3),
 .detailTotal td:nth-child(4) {
     width: 15%
+}
+
+.detailTotal td:nth-child(2),
+.detailTotal td:nth-child(3),
+.detailTotal td:nth-child(4),
+.detailTotal td:nth-child(5),
+.detailTotal td:nth-child(6),
+.detailTotal td:nth-child(7),
+.detailTotal td:nth-child(8),
+.detailTotal td:nth-child(9){
+    text-align: right;
+    padding-right: 1rem;
+    box-sizing: border-box;
 }
