--- a/static/css/dispatch/order.css
+++ b/static/css/dispatch/order.css
@@ -1,10 +1,116 @@
+.orderLayout {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+  height: 81rem;
+}
+
+
+
+
+
+
+/* 스케줄 */
+.schedule {
+  position: relative;
+  height: 100%;
+}
+
+.scheduleHeaderArea {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 5.8rem;
+  padding: 0;
+}
+
+.scheduleCloseBtn {
+  position: absolute;
+  left: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 3.6rem;
+  height: 3.6rem;
+  background-color: #444;
+  border-radius: 1.8rem;
+  font-size: 1.4rem;
+  color: white;
+  cursor: pointer;
+}
+
+.scheduleOpenBtn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  width: 3.6rem;
+  height: 3.6rem;
+  background-color: #444;
+  border-radius: 1.8rem;
+  font-size: 1.4rem;
+  color: white;
+  cursor: pointer;
+}
+
+.scheduleOpenBtnVisible {
+  display: flex;
+}
+
+.driverTd {
+  width: calc(100% - 23.184rem);
+}
+
+
+
+
+
+
+
+
+
+
+.MainLayout {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: calc(100% - 38rem);
+  height: 100%;
+}
+
+
+
+
+
+
+/* 검색창 */
 /* 검색창 변경영역 */
 .dateControllBtnBox {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 5.6rem;
+  width: 10rem;
   margin-left: 1.2rem;
+}
+
+.dateToday {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 4.2rem;
+  height: 2.4rem;
+  background-color: #444;
+  color: white;
+  font-size: 1.4rem;
+  border-radius: 0.3rem;
+  cursor: pointer;
 }
 
 .dateControllBtn {
@@ -20,11 +126,15 @@
   cursor: pointer;
 }
 
-.searchDate:nth-child(1) {
+.dateControllBtn svg {
+  width: 40%;
+}
+
+.search_inputArea input:nth-child(4) {
   margin-right: 0.6rem;
 }
 
-.searchDate:nth-child(2) {
+.search_inputArea input:nth-child(5) {
   margin-left: 0.6rem;
 }
 
@@ -32,306 +142,495 @@
 
 
 
-/* 입력 배차 form */
-.inputDispatchForm {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 26rem;
-}
-
-
-
 
 
 /* 입력창 */
-.input {
+.inputTableBox {
   position: relative;
-  height: 18rem;
+  width: 100%;
+  height: 18.5rem;
+  background-color: white;
+  box-shadow: 0.1rem 0.1rem 0.6rem rgb(0 0 0 / 30%);
 }
 
-.inputSave {
+.inputTableBtnBox {
   position: absolute;
   top: -5.8rem;
-  right: 1rem;
+  right: 2rem;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+  width: 21.5rem;
+}
+
+.inputSave,
+.newOrder {
   background-color: #0069D9;
 }
 
-.InputHeader {
-  width: 10rem;
+.inputDelete {
+  background-color: #444;
+}
+
+.inputTableBox table {
+  width: 100%;
+  height: 100%;
+  table-layout: fixed;
+}
+
+.inputTableBox tr {
+  width: 100%;
+  height: 3.1rem;
+  box-sizing: border-box;
+}
+
+.inputTableBox tr:nth-last-child(1) {
+  height: 3rem;
+}
+
+.inputTableBox tr:nth-last-child(1) td {
+  border-bottom: none;
+}
+
+.inputTableBox td {
+  padding: 0;
+  font-size: 1.4rem;
+  border-bottom: 0.1rem solid #CDCDCE;
+}
+
+.tdTypeA {
+  text-align: center;
+  background-color: #444;
+  color: white;
+  font-size: 1.4rem;
+  width: 7%;
+}
+
+.tdTypeB {
+  width: 43%;
+  font-size: 1.4rem;
+}
+
+.tdTypeC {
+  width: 18%;
+  font-size: 1.4rem;
+}
+
+.tdTypeD {
+  width: 5.5%;
+  font-size: 1.4rem;
+}
+
+.inputTableBox input[type=checkbox] {
+  margin: 0;
+  margin-left: 0.6rem;
 }
 
 .quarterBox {
+  width: 48%;
   justify-content: space-between;
 }
 
 .inputTextquarter {
-  width: 55%;
+  width: 56%;
   height: 1.8rem;
   margin: 0 0.8rem;
   outline: none;
 }
 
 .deeperBox {
-  width: 40%;
-}
-
-
-
-
-
-/* 일반배차 */
-.orderDispatch {
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  width: 100%;
-  height: 6rem;
-  background-color: white;
-  border-radius: 0.2rem;
-  box-shadow: 0.1rem 0.1rem 0.6rem rgba(0, 0, 0, 0.3);
-  box-sizing: border-box;
-}
-
-.orderDispatchTable {
-  width: 100%;
-  border-spacing: 0;
-  font-size: 1.4rem;
-  text-align: center;
-}
-
-.orderDispatchTable tr {
-  height: 3rem;
-}
-
-.orderDispatchTable thead tr {
-  background-color: #444;
-  color: white;
-}
-
-.orderDispatchTable td {
-  width: calc((100%/13)*2);
-  border-right: 0.1rem solid black;
-  border-bottom: 0.1rem solid black;
-}
-
-.orderDispatchTable tbody tr:nth-last-child(1) td {
-  border-bottom: none;
-}
-
-.orderDispatchTable td:nth-last-child(1) {
-  width: calc(100%/13);
-  border-right: none;
-}
-
-.orderDispatchDelete {
-  margin: 0 auto;
-  background-color: #444;
-}
-
-.orderDispatchTable tbody td:nth-child(1) {
-  cursor: pointer;
-}
-
-.orderDriverSelect {
-  height: 2.4rem;
-  margin: 0 0.8rem;
-  outline: none;
+  justify-content: space-between;
+  align-items: center;
+  width: 42%;
 }
 
 
 
 
 
-/* 노선목록 */
-.list {
-  height: calc(100% - 35.2rem);
+
+
+
+
+
+/* 배차팝업 */
+.popupContainerDispatch {
+  top: 65%;
+  left: 51%;
 }
 
-.listHeader {
+.popupSectionDispatch {
+  height: 35rem;
+  overflow-y: scroll;
+}
+
+/* 스크롤바 설정*/
+.popupSectionDispatch::-webkit-scrollbar {
+  width: 1rem;
+}
+
+/* 스크롤바 막대 설정*/
+.popupSectionDispatch::-webkit-scrollbar-thumb {
+  height: 17%;
+  background-color: #444444;
+  border-radius: 1rem;
+}
+
+/* 스크롤바 뒷 배경 설정*/
+.popupSectionDispatch::-webkit-scrollbar-track {
+  background-color: #D2D2D2;
+}
+
+.dispatchBox {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 4.2rem;
+  height: 6rem;
+  margin-top: 2rem;
 }
 
-.listHeader span {
-  font-size: 1.6rem;
-  margin-left: 0.8rem;
+.dispatchBox:nth-child(1) {
+  margin-top: 0;
 }
 
-.listExcel {
-  width: 12rem;
-  margin-right: 0.8rem;
+.removeBtn {
+  margin-right: 2rem;
+  cursor: pointer;
+}
+
+.dispatcTable {
+  border-top: 0.1rem solid #444;
+  border-bottom: 0.1rem solid #444;
+}
+
+.dispatcTable tr {
+  height: 3rem;
+  border-top: none;
+  border-bottom: none;
+}
+
+.dispatcTable .tdTypeA{
+  width: 16%;
+}
+
+.dispatcTable td:nth-child(even) {
+  width: 50%;
+}
+
+.dispatcTable td input,
+.dispatcTable td select {
+  border: 0.1rem solid #444;
+  border-radius: 0.2rem;
+  box-sizing: border-box;
+}
+
+.dispatcTable td select{
+  height: 2rem;
+  padding: 0.2rem;
+}
+
+.dispatchTableTitle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 8rem;
+  height: 100%;
+  font-size: 1.4rem;
+  color: white;
   background-color: #444;
 }
 
-.listTable {
+.popupAreaModulesVisible{
+  display: block;
+}
+
+
+
+
+
+
+
+
+
+/* 노선 리스트 */
+.orderListBox {
   width: 100%;
-  height: 2.8rem;
+  height: calc(100% - 27.7rem);
+  background-color: white;
+  box-shadow: 0.1rem 0.1rem 0.6rem rgb(0 0 0 / 30%);
 }
 
-.listTableScroll {
-  height: 39.5rem;
-  overflow-y: hidden;
-}
-
-.ListTableBox {
-  width: 56%;
-  padding: 0;
-}
-
-.listTableScroll .listTable {
-  height: 100%;
-}
-
-.listTableScroll .ListTableBox {
+.orderListHeader {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
-  height: 36.8rem;
-  overflow-y: scroll;
-}
-
-.listTableScroll .ListTableBox::-webkit-scrollbar {
-  display: none;
-}
-
-.listTableScroll .ListTableBox::-webkit-scrollbar-thumb {
-  display: none;
-}
-
-.listTableScroll .ListTableBox::-webkit-scrollbar-track {
-  display: none;
-}
-
-.listTableScroll .ListTableBox table {
-  table-layout: fixed;
-}
-
-.ListTableBox table {
-  width: 100%;
-  border-spacing: 0;
-}
-
-.listTableFixedTd1 {
-  width: 19%;
-}
-
-.listTableFixedTd2,
-.listTableFixedTd3,
-.listTableFixedTd5 {
-  width: 11%;
-}
-
-.listTableFixedTd4 {
-  width: 48%;
-}
-
-.listTableFixedTd5 {
-  border-right: 0.1rem solid white;
-}
-
-.scrollListTableBox {
-  width: 44%;
-  padding: 0;
-}
-
-.scrollListTableWidth {
-  width: 100%;
-  overflow: scroll;
-}
-
-.listTable thead .scrollListTableWidth {
-  width: 100%;
-  padding-right: 1rem;
+  height: 3.6rem;
+  padding: 0 1rem;
   box-sizing: border-box;
-  overflow: scroll;
 }
 
-.listTableScroll .scrollListTableWidth {
-  height: 39.5rem;
-  overflow: scroll;
+.orderListHeader span {
+  font-size: 1.4rem;
 }
 
-.scrollListTableBox table {
-  width: 500%;
-  border-spacing: 0;
+.orderListBtnBox {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 34rem;
+  height: 3.6rem;
 }
 
-.listTable thead .scrollListTableBox table {
-  width: 500%;
+.dispatchBtn {
+  background-color: #0069D9;
 }
 
-.listTable thead .scrollListTableWidth::-webkit-scrollbar {
-  display: none;
+.printBtn,
+.docmentBtn,
+.ExcelBtn {
+  background-color: #444;
 }
 
-.listTable thead .scrollListTableWidth::-webkit-scrollbar-thumb {
-  display: none;
+.ExcelBtn {
+  width: 12rem;
 }
 
-.listTable thead .scrollListTableWidth::-webkit-scrollbar-track {
-  display: none;
+.orderListBody {
+  position: relative;
+  display: flex;
+  align-items: flex-start;
+  width: 100%;
+  height: calc(100% - 3.6rem);
+  padding: 0 1rem 1rem 0;
+  box-sizing: border-box;
 }
 
-.scrollListTableWidth::-webkit-scrollbar {
-  width: 1rem;
+.orderListMain {
+  display: flex;
+  flex-direction: column;
+  width: 90rem;
+  height: 100%;
+  border-right: 0.1rem solid #CDCDCE;
+  box-sizing: border-box;
+}
+
+.orderListSub {
+  display: flex;
+  flex-direction: column;
+  width: calc(100% - 90rem);
+  height: calc(100% + 1rem);
+  overflow-x: scroll;
+}
+
+/* 스크롤바 설정*/
+.orderListSub::-webkit-scrollbar {
   height: 1rem;
 }
 
-.scrollListTableWidth::-webkit-scrollbar-thumb {
+/* 스크롤바 막대 설정*/
+.orderListSub::-webkit-scrollbar-thumb {
   height: 17%;
   background-color: #444444;
-  border-radius: 10px;
+  border-radius: 1rem;
 }
 
-.scrollListTableWidth::-webkit-scrollbar-track {
+/* 스크롤바 뒷 배경 설정*/
+.orderListSub::-webkit-scrollbar-track {
   background-color: #D2D2D2;
 }
 
-.listTable tbody .ListTableBox td,
-.listTable tbody .scrollListTable td {
-  border-right: 0.1rem solid black;
-  border-bottom: 0.1rem solid black;
+.orderListSubScrollX {
+  display: flex;
+  flex-direction: column;
+  width: 300rem;
+  height: 100%;
 }
 
-.listTable tbody .ListTableBox {
-  padding-bottom: 1.7rem;
+.orderListSubScroll {
+  width: 100%;
+  height: calc(100% - 7.2rem);
+  overflow-y: scroll;
 }
 
-.scrollListTable td:nth-child(2),
-.scrollListTable td:nth-child(3),
-.scrollListTable td:nth-child(4),
-.scrollListTable td:nth-child(6),
-.scrollListTable td:nth-child(8),
-.scrollListTable td:nth-child(9),
-.scrollListTable td:nth-child(10),
-.scrollListTable td:nth-child(11),
-.scrollListTable td:nth-child(12),
-.scrollListTable td:nth-child(13),
-.scrollListTable td:nth-child(14),
-.scrollListTable td:nth-child(15) {
-  width: calc(100% / 23);
+/* 스크롤바 설정*/
+.orderListSubScroll::-webkit-scrollbar {
+  width: 0rem;
 }
 
-.scrollListTable td:nth-child(5) {
-  width: calc(200% / 23);
+.orderListTableHead {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 3.6rem;
+  background-color: #444;
 }
 
-.scrollListTable td:nth-child(1),
-.scrollListTable td:nth-child(7) {
-  width: calc(400% / 23);
+.orderListScrollBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 100%;
+  height: auto;
+}
+
+/* 스크롤바 설정*/
+.orderListSub::-webkit-scrollbar {
+  height: 1rem;
+}
+
+/* 스크롤바 막대 설정*/
+.orderListSub::-webkit-scrollbar-thumb {
+  height: 17%;
+  background-color: #444444;
+  border-radius: 1rem;
+}
+
+/* 스크롤바 뒷 배경 설정*/
+.orderListSub::-webkit-scrollbar-track {
+  background-color: #D2D2D2;
+}
+
+.orderListItem {
+  display: flex;
+  width: 100%;
+  height: 7rem;
+  border-bottom: 0.1rem solid #CDCDCE;
+}
+
+.orderListTotal {
+  display: flex;
+  width: 100%;
+  height: 3.6rem;
+  background-color: #CDCDCE;
+  border-top: 0.1rem solid #707070;
+  border-bottom: 0.1rem solid #707070;
+  box-sizing: border-box;
+}
+
+.orderListTotal .orderListMainContents,
+.orderListTotal .orderListSubContents {
+  border-right: 0.1rem solid #707070;
+}
+
+.orderListScrollYBox {
+  position: absolute;
+  z-index: 0;
+  top: 3.6rem;
+  right: 0;
+  width: 1.01rem;
+  height: calc(100% - 8.2rem);
+  overflow-y: scroll;
+}
+
+.orderListScrollYBox div {
+  height: 50rem;
+}
+
+/* 스크롤바 설정*/
+.orderListScrollYBox::-webkit-scrollbar {
+  width: 1rem;
+}
+
+/* 스크롤바 막대 설정*/
+.orderListScrollYBox::-webkit-scrollbar-thumb {
+  height: 17%;
+  background-color: #444444;
+  border-radius: 1rem;
+}
+
+/* 스크롤바 뒷 배경 설정*/
+.orderListScrollYBox::-webkit-scrollbar-track {
+  background-color: #D2D2D2;
+}
+
+.orderListTableHead .orderListMainContents,
+.orderListTableHead .orderListSubContents {
+  color: white;
+  border-right: none;
+}
+
+.orderListMainContents,
+.orderListSubContents {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  font-size: 1.4rem;
+  border-right: 0.1rem solid #CDCDCE;
+  box-sizing: border-box;
+}
+
+.orderListMain1 {
+  width: 16%;
+}
+
+.orderListMain2 {
+  width: 14%;
+}
+
+.orderListMain3,
+.orderListMain5 {
+  width: 8%;
+}
+
+.orderListMain5 {
+  border-right: 0;
+}
+
+.orderListTableHead .orderListMain4{
+  justify-content: center;
+}
+
+.orderListMain4 {
+  justify-content: flex-start;
+  width: 55%;
+  padding-left: 1rem;
+  box-sizing: border-box;
+}
+
+.orderListSubContents:nth-child(1) {
+  width: 30rem;
+}
+
+.orderListSubContents:nth-child(2),
+.orderListSubContents:nth-child(3),
+.orderListSubContents:nth-child(4),
+.orderListSubContents:nth-child(7),
+.orderListSubContents:nth-child(9),
+.orderListSubContents:nth-child(10),
+.orderListSubContents:nth-child(11),
+.orderListSubContents:nth-child(12),
+.orderListSubContents:nth-child(13),
+.orderListSubContents:nth-child(14),
+.orderListSubContents:nth-child(15),
+.orderListSubContents:nth-child(16) {
+  width: 14rem;
+}
+
+.orderListSubContents:nth-child(5) {
+  width: 22rem;
+}
+
+.orderListSubContents:nth-child(6),
+.orderListSubContents:nth-child(8) {
+  width: 40rem;
 }
 
 
+.orderListTableHead .orderListSubContents:nth-child(5),
+.orderListTableHead .orderListSubContents:nth-child(6),
+.orderListTableHead .orderListSubContents:nth-child(8){
+  justify-content: center;
+}
 
-
-
-
-/* 스케줄 */
-.driverTd {
-  width: calc(100% - 25.2rem);
+.orderListSubContents:nth-child(5),
+.orderListSubContents:nth-child(6),
+.orderListSubContents:nth-child(8) {
+  justify-content: flex-start;
+  padding-left: 1rem;
+  box-sizing: border-box;
 }
