--- a/static/css/notice/notice_create.css
+++ b/static/css/notice/notice_create.css
@@ -75,9 +75,9 @@
 
 .contentsAreaBox form textarea {
   height: auto;
-  min-height: 40rem;
-  padding: 1rem;
+  min-height: 36rem;
   margin-top: 2rem;
+  padding: 1rem;
   border: 0.1rem solid #D2D2D2;
   border-radius: 0.3rem;
   resize: none;
@@ -90,6 +90,12 @@
   width: 100%;
   height: 2.5rem;
   margin: 2rem 0;
+}
+
+.textArea{
+  width: 100%;
+  height: 5rem;
+  border: 0.1rem solid black;
 }
 
 
@@ -196,14 +202,16 @@
 
 
 /*commentCreateArea*/
-.commentCreateArea{
+.commentCreateArea {
   height: 18rem;
 }
-.commentCreateArea form{
+
+.commentCreateArea form {
   width: 100%;
   height: 100%;
 }
-.commentCreateTitle{
+
+.commentCreateTitle {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -214,13 +222,15 @@
   color: #191919;
   border-bottom: 0.1rem solid #CDCDCE;
 }
-.commentCreateBox{
+
+.commentCreateBox {
   display: flex;
   justify-content: space-between;
   height: 10rem;
   margin: 1rem 0;
 }
-.commentCreateGuide{
+
+.commentCreateGuide {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -232,7 +242,8 @@
   font-size: 1.6rem;
   color: #191919;
 }
-.commentCreateBox textarea{
+
+.commentCreateBox textarea {
   width: calc(100% - 12rem);
   height: 100%;
   padding: 1rem;
@@ -242,7 +253,13 @@
   outline: none;
   resize: none;
 }
-.commentCreateBtnCell{
+
+.commentCreateBtnCell {
   display: flex;
   justify-content: flex-end;
 }
+
+
+
+
+
