--- a/static/css/vehicle/list.css
+++ b/static/css/vehicle/list.css
@@ -26,10 +26,9 @@
 }
 
 .tableHead {
-    width: calc(100% - 0.2rem);
+    width: 100%;
     height: 4.8rem;
-    border: 0.1rem solid #CDCDCE;
-    border-radius: 0.5rem 0.5rem 0 0;
+    border-spacing: 0;
 }
 
 .tableHead thead {
@@ -38,7 +37,6 @@
 }
 
 table tr {
-    display: flex;
     width: 100%;
     height: 6.4rem;
     border-bottom: 0.1rem solid #CDCDCE;
@@ -51,14 +49,19 @@ table tr {
     border: none;
     font-size: 1.6rem;
     font-weight: 700;
-    color: #7A7A7A;
+    color: white;
+    background-color: #444444;
 }
 
-table tr:nth-child(odd) {
+.tableHead td{
+    text-align: center;
+}
+
+.tableBody tr:nth-child(odd) {
     background-color: white;
 }
 
-table tr:nth-child(even) {
+.tableBody tr:nth-child(even) {
     background-color: #EFEFEF;
 }
 
@@ -68,10 +71,11 @@ table tr:nth-child(10) {
 
 
 .tableBody {
-    width: calc(100% - 0.2rem);
+    width: 100%;
     height: 64em;
     margin-top: -0.1rem;
     border: 0.1rem solid #CDCDCE;
+    border-spacing: 0;
 }
 
 tbody {
@@ -80,257 +84,98 @@ tbody {
 }
 
 .tableBody td {
-    display: flex;
-    align-items: center;
     font-size: 1.4rem;
     color: #191919;
+    border-right: 0.1rem solid #D4D4D4;
+    border-bottom: 0.1rem solid #D4D4D4;
 }
 
 td:nth-child(1) {
-    display: flex;
-    justify-content: center;
     width: 6%;
 }
 
-tbody td:nth-child(2),
-tbody td:nth-child(8),
-tbody td:nth-child(9) {
+tbody td:nth-child(3),
+tbody td:nth-child(9),
+tbody td:nth-child(10) {
     color: #0069D9;
     cursor: pointer;
 }
 
 td:nth-child(2) {
-    width: 12%;
+    width: 4%;
 }
 
 td:nth-child(3) {
-    width: 10%;
-}
-
-td:nth-child(4) {
     width: 12%;
 }
 
+td:nth-child(4) {
+    width: 10%;
+}
+
 td:nth-child(5) {
-    display: flex;
+    width: 12%;
+}
+
+td:nth-child(6) {
     justify-content: center;
     width: 6%;
 }
 
-td:nth-child(6) {
+td:nth-child(7) {
     width: 8%;
 }
 
-td:nth-child(7) {
+td:nth-child(8) {
     width: 12%;
 }
 
-td:nth-child(8) {
-    width: 17%;
+td:nth-child(9) {
+    width: 15%;
 }
 
-td:nth-child(9) {
-    width: 17%;
+td:nth-child(10) {
+    width: 15%;
+}
+
+.tableBody td {
+    text-align: center;
 }
 
 .btnBox input {
     background-color: #444444;
 }
 
-.popupContainer {
-    position: fixed;
-    top: 50%;
-    left: calc(50% + 11rem);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 80rem;
-    height: 58rem;
-    background-color: white;
-    border-radius: 0.3rem;
-    box-shadow: 0 0.2rem 0.4rem rgb(0 0 0 / 16%);
-    transform: translate(-50%, -50%);
-}
 
-.detailPopupContainer {
-    position: fixed;
-    top: 50%;
-    left: calc(50% + 11rem);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 80rem;
-    height: 58rem;
-    background-color: white;
-    border-radius: 0.3rem;
-    box-shadow: 0 0.2rem 0.4rem rgb(0 0 0 / 16%);
-    transform: translate(-50%, -50%);
-}
-
-.PopupTitle {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 4.8rem;
-    border-bottom: 0.1rem solid #191919;
-    font-size: 1.6rem;
-    font-weight: 500;
-}
-
-.PopupDataArea {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    width: 100%;
-    height: calc(100% - 9.7rem);
-    padding: 4.2rem 3rem 0 3rem;
-    box-sizing: border-box;
-}
-
-.PopupDataCell {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
-    width: 23rem;
-    height: 6rem;
-}
-
-.PopupData {
-    width: 100%;
-    padding-bottom: 0.1rem;
-    font-size: 1.4rem;
-    color: #191919;
-    border-bottom: 0.1rem solid #191919;
-}
-
-.PopupDataTitle {
-    font-size: 1.4rem;
-    color: #7A7A7A;
-}
-
-.PopupDataInput {
-    width: 100%;
-    height: 2.6rem;
-    padding-left: 0.6rem;
-    padding-bottom: 0.1rem;
-    font-size: 1.4rem;
-    color: #191919;
-    border: 0.1rem solid #D2D2D2;
-    border-radius: 0.3rem;
-    box-sizing: border-box;
-    outline: none;
-}
-
-.PopupBtnBox {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 4.8rem;
-    box-sizing: border-box;
-}
-
-.closeBtn {
-    background-color: #444444;
-    margin: 1rem;
-}
-
-.createBtn {
-    background-color: #0069D9;
-    margin: 1rem;
-}
-
-.editBtn {
-    background-color: #0069D9;
-    margin: 1rem;
-}
-
-.saveBtn {
-    display: none;
-    background-color: #0069D9;
-    margin: 1rem;
-}
-
-.vehicleNumBox {
+.vehicleNumBox{
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    width: 27rem;
 }
 
-.vehicleNumBox .PopupData:nth-child(1) {
-    width: 60%;
+.popupArticleDouble .vehicleNumBox .popupArticleInput{
+    width: 13rem;
 }
 
-.vehicleNumBox .PopupData:nth-child(2) {
-    width: 35%;
-}
-
-.vehicleNumBox input:nth-child(1) {
-    width: 60%;
-}
-
-.vehicleNumBox input:nth-child(2) {
-    width: 35%;
-}
-
-.PopupDataAreaEdit {
+.popupSectionEdit{
     display: none;
 }
 
-.fileForm {
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
+.popupFooterDetail .createBtn{
+    display: none;
 }
 
-#vehicleFile {
-    width: 0;
-    height: 0;
-    border: none;
-    outline: none;
-    overflow: hidden;
+.vehicleNumBox .PopupData{
+    width: 13rem;
 }
 
-#insuranceFile {
-    width: 0;
-    height: 0;
-    border: none;
-    outline: none;
-    overflow: hidden;
-}
-
-.fileNameBox {
-    width: calc(100% - 7.2rem);
-    border: 0.1rem solid #D2D2D2;
-    border-left: none;
-    box-sizing: border-box;
-}
-
-.fileLabel {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 7.2rem;
-    height: 2.6rem;
-    border-radius: 0.3rem 0 0 0.3rem;
-    background-color: #444444;
-    color: white;
-    font-size: 1.3rem;
-}
-
-.fileDeletBtn {
-    position: absolute;
-    top: 48%;
-    left: 22rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 1.4rem;
-    height: 1.4rem;
+.editBtn{
+    left: 50%;
+    background-color: #0069D9;
     transform: translate(-50%, -50%);
-    cursor: pointer;
+}
+
+.balckTr{
+    width: 100%;
+    height: 100%;
 }
